# buggy

./: CHANGELOG  CMakeLists.txt  README.md  main.cpp
include/: buggy.h  word.h
src/: buggy.cpp
test/: BasicRecognizerTest.cpp  CMakeLists.txt
